some css refactoring and changes to "ajax update" data in the item's detail modal window after "add transaction"

--- a/crypfolio/web/faces/items-list.xhtml
+++ b/crypfolio/web/faces/items-list.xhtml
@@ -15,7 +15,7 @@
                                     PF('portfolioDataTableWV').selectRow(#{selectedRowIndexPortolioItems}, false);"/>
 
         <h:outputText value="#{itemEntity.coin.name}"
-                      style="font-weight:bold; line-height: 2; padding-left: 10px;" styleClass="left"/>
+                      style="font-weight:bold; line-height: 2; padding-left: 10px;"/>
 
     </p:column>
 
