--- a/crypfolio/web/faces/watchlist.xhtml
+++ b/crypfolio/web/faces/watchlist.xhtml
@@ -131,8 +131,7 @@
             <!--   row Expansion>   -->
             <p:rowExpansion>
 
-                <h:panelGroup styleClass="row-expansion-currency"
-                              style="display: flex; justify-content: space-between;">
+                <h:panelGroup styleClass="row-expansion-currency flex-space-between">
 
                     <h:form style="padding-left: 30px;">
                         <h:outputText value="Currency:"/>
@@ -206,7 +205,7 @@
                                         width="32" height="32"/>
                             </p:column>
 
-                            <p:column style="display: flex; justify-content: space-between; margin-top: 5px;">
+                            <p:column styleClass="flex-space-between" style="margin-top: 5px;">
                                 #{coinTemp.name} <span style="margin: 0 10px;">#{coinTemp.symbol}</span>
                             </p:column>
 
